# ITBench

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  CONTRIBUTORS.md  LEADERBOARD_CISO.md  LEADERBOARD_SRE.md  Makefile  README.md  ansible.cfg  pyproject.toml  renovate.json  requirements.yaml
scenarios/sre/: .ansible-lint-ignore  .gitignore  Makefile  Makefile.runner  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yaml
scenarios/sre/dev/local_cluster/: Makefile  README.md  README_RHEL.md  go.mod
scenarios/sre/dev/remote_cluster/: .ansible-lint-ignore  Makefile  README.md
scenarios/sre/docs/: applications.md  e2e.md  faults.md  observability-vendors.md  scenarios.md  waiters.md
scenarios/sre/group_vars/all/: storage.yaml.example
scenarios/sre/group_vars/environment/: applications.yaml.example  tools.yaml.example
scenarios/sre/group_vars/runner/: experiments.yaml.example
scenarios/sre/inventory/: inventory.yaml
scenarios/sre/playbooks/: check_for_specific_alerts_in_firing_state.yaml  generate_agent_bundle.yaml  generate_leaderboard_bundle_status.yaml  manage_agent_access.yaml  manage_agent_transition.yaml  manage_applications.yaml  manage_awx.yaml  manage_faults.yaml  manage_recorders.yaml  manage_tools.yaml  scaffold_fault.yaml  scaffold_scenario.yaml
scenarios/sre/project/: check_for_specific_alerts_in_firing_state.yaml  clear_kubernetes_events.yaml  display_gateway_endpoints.yaml  generate_agent_bundle.yaml  generate_documentation_index.yaml  generate_leaderboard_bundle.yaml  generate_leaderboard_bundle_status.yaml  generate_scenario_files.yaml  manage_agent_access.yaml  manage_agent_transition.yaml  manage_applications.yaml  manage_awx.yaml  manage_documentation.yaml  manage_faults.yaml  manage_recorders.yaml  manage_resource_files.yaml  manage_tools.yaml  pause_execution.yaml  warmup_awx.yaml
scenarios/sre/scripts/: generate_library_index_schemas.py  generate_library_indexes.py  generate_library_readmes.py  inject_scenario_faults.py  validate_library_indexes.py
scenarios/sre/scripts/unittests/: test_generate_library_index_schemas.py  test_generate_library_indexes.py  test_generate_library_readmes.py  test_inject_scenario_faults.py  test_validate_library_indexes.py
scenarios/sre/tests/files/: clickhouse.yaml  jaeger.yaml  kubernetes-topology-monitor.yaml  opencost.yaml  opentelemetry.yaml  prometheus.yaml
scenarios/sre/tools/awx-ee/: README.md  bindep.txt  (+3 more)
(+1429 files in other folders)
