[project]
name = "ITBench"
version = "1.4.1"
description = "IT Domain AI Agents Benchmarks"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "ansible-core==2.20.5",
    "ansible-lint==26.4.0",
    "ansible-runner==2.4.3",
    "awxkit==24.6.1",
    "boto3==1.43.6",
    "jsonschema==4.26.0",
    "kubernetes==35.0.0",
    "molecule==26.4.0",
]

[dependency-groups]
dev = [
    "ansible-builder==3.1.1",
    "commitizen==4.15.1",
    "detect-secrets",
    "pre-commit==4.6.0",
]

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets.git", rev = "38ba7e335083e0a4db8c53e9be414795b27891e9" } # pragma: allowlist secret
