[project]
name = "ITBench"
version = "1.4.1"
description = "IT Domain AI Agents Benchmarks"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ansible-core==2.20.2",
    "jmespath==1.1.0",
    "jsonschema==4.26.0",
    "kubernetes==35.0.0",
]

[dependency-groups]
dev = [
    "ansible-builder==3.1.1",
    "ansible-lint==26.1.1",
    "boto3==1.42.43",
    "commitizen==4.13.5",
    "detect-secrets",
    "pre-commit==4.5.1",
]

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets.git", rev = "076672a9a01abdfc7ecee2e7d14f08cdccb73976" }
